[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://scripts/multiverse_shop.gd" type="Script" id=2]
[ext_resource path="res://scripts/storage.gd" type="Script" id=3]
[ext_resource path="res://scripts/howto.gd" type="Script" id=4]
[ext_resource path="res://scripts/messages.gd" type="Script" id=5]

[node name="HUD" type="Node"]

script = ExtResource( 1 )

[node name="ms_button" type="Button" parent="."]

margin_left = 5.0
margin_top = 5.0
margin_right = 137.0
margin_bottom = 30.0
rect_clip_content = false
hint_tooltip = "The best resources in the whole multi-verse!"
mouse_filter = 0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Multiverse Shop"
flat = false

[node name="ms" type="Control" parent="."]

visible = false
margin_left = -615.0
margin_right = -615.0
rect_clip_content = false
mouse_filter = 0
script = ExtResource( 2 )

[node name="tabs" type="TabContainer" parent="ms"]

margin_left = 620.0
margin_top = 31.0
margin_right = 893.0
margin_bottom = 459.0
rect_clip_content = false
mouse_filter = 0
tab_align = 0
tabs_visible = true

[node name="*" type="Tabs" parent="ms/tabs"]

anchor_right = 1
anchor_bottom = 1
margin_left = 4.0
margin_top = 32.0
margin_right = 4.0
margin_bottom = 4.0
rect_clip_content = false
mouse_filter = 0

[node name="items" type="Tree" parent="ms/tabs/*"]

anchor_right = 1
anchor_bottom = 1
margin_left = 5.0
margin_top = 5.0
margin_right = 3.0
margin_bottom = 31.0
mouse_filter = 0

[node name="**" type="Tabs" parent="ms/tabs"]

visible = false
anchor_right = 1
anchor_bottom = 1
margin_left = 4.0
margin_top = 32.0
margin_right = 4.0
margin_bottom = 4.0
rect_clip_content = false
mouse_filter = 0

[node name="items" type="Tree" parent="ms/tabs/**"]

anchor_right = 1
anchor_bottom = 1
margin_left = 5.0
margin_top = 5.0
margin_right = 3.0
margin_bottom = 31.0
mouse_filter = 0

[node name="***" type="Tabs" parent="ms/tabs"]

visible = false
anchor_right = 1
anchor_bottom = 1
margin_left = 4.0
margin_top = 32.0
margin_right = 4.0
margin_bottom = 4.0
rect_clip_content = false
mouse_filter = 0

[node name="items" type="Tree" parent="ms/tabs/***"]

anchor_right = 1
anchor_bottom = 1
margin_left = 5.0
margin_top = 5.0
margin_right = 3.0
margin_bottom = 31.0
mouse_filter = 0

[node name="panel" type="Panel" parent="ms"]

margin_left = 895.0
margin_top = 55.0
margin_right = 990.0
margin_bottom = 460.0
rect_clip_content = false
mouse_filter = 0

[node name="Label" type="Label" parent="ms/panel"]

anchor_right = 1
anchor_bottom = 1
margin_left = -265.0
margin_top = 375.0
margin_right = 72.0
margin_bottom = -1.0
rect_scale = Vector2( 0.9, 0.9 )
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 0
text = "Hint: mouse over an item for it's description."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="buy" type="Button" parent="ms/panel"]

anchor_right = 1
anchor_bottom = 1
margin_left = 9.0
margin_top = 353.0
margin_right = 10.0
margin_bottom = 11.0
rect_clip_content = false
mouse_filter = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Buy"
flat = false

[node name="storage_button" type="Button" parent="."]

margin_left = 757.0
margin_top = 5.0
margin_right = 816.0
margin_bottom = 30.0
rect_clip_content = false
mouse_filter = 0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Storage"
flat = false

[node name="storage" type="Control" parent="."]

margin_left = 2.0
margin_right = 2.0
rect_clip_content = false
mouse_filter = 0
script = ExtResource( 3 )

[node name="panel" type="Panel" parent="storage"]

margin_left = 755.0
margin_top = 56.0
margin_right = 1018.0
margin_bottom = 460.0
rect_clip_content = false
mouse_filter = 0

[node name="items" type="Tree" parent="storage/panel"]

margin_left = 15.0
margin_top = 10.0
margin_right = 252.0
margin_bottom = 392.0
mouse_filter = 0

[node name="funds" type="PanelContainer" parent="."]

margin_left = 817.0
margin_top = 3.0
margin_right = 948.0
margin_bottom = 32.0
rect_clip_content = false
mouse_filter = 0

[node name="label" type="Label" parent="funds"]

margin_left = 7.0
margin_top = 7.0
margin_right = 124.0
margin_bottom = 21.0
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 0
text = "Funds:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cash" type="Label" parent="funds"]

margin_left = 65.0
margin_top = 7.0
margin_right = 65.0
margin_bottom = 21.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="help_button" type="Button" parent="."]

margin_left = 951.0
margin_top = 5.0
margin_right = 1020.0
margin_bottom = 30.0
rect_clip_content = false
mouse_filter = 0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "HowTo"
flat = false

[node name="help" type="Control" parent="."]

margin_left = 2.0
margin_right = 2.0
rect_clip_content = false
mouse_filter = 0
script = ExtResource( 4 )

[node name="panel" type="Panel" parent="help"]

margin_left = 756.0
margin_top = 56.0
margin_right = 1018.0
margin_bottom = 460.0
rect_clip_content = false
mouse_filter = 0

[node name="text" type="RichTextLabel" parent="help/panel"]

margin_left = 7.0
margin_top = 8.0
margin_right = 252.0
margin_bottom = 394.0
mouse_filter = 0
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1

[node name="messages" type="Control" parent="."]

margin_left = 380.0
margin_top = 10.0
margin_right = 745.0
margin_bottom = 460.0
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 0
script = ExtResource( 5 )

[node name="combibator_button" type="Button" parent="."]

margin_left = 5.0
margin_top = 575.0
margin_right = 91.0
margin_bottom = 595.0
rect_clip_content = false
mouse_filter = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Combinator"
flat = false

[node name="incubator_button" type="Button" parent="."]

margin_left = 95.0
margin_top = 575.0
margin_right = 168.0
margin_bottom = 595.0
rect_clip_content = false
mouse_filter = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Incubator"
flat = false

[connection signal="pressed" from="ms_button" to="." method="_on_ms_button_pressed"]

[connection signal="pressed" from="ms/panel/buy" to="ms" method="_on_buy_pressed"]

[connection signal="pressed" from="storage_button" to="." method="_on_storage_button_pressed"]

[connection signal="pressed" from="help_button" to="." method="_on_help_button_pressed"]

[connection signal="pressed" from="combibator_button" to="." method="_on_combibator_button_pressed"]

[connection signal="pressed" from="incubator_button" to="." method="_on_incubator_button_pressed"]


